# MyBZFlag

./: groupfile.txt  lookup.txt
Roundabout-Louman/: RoundaboutR2.bzw
TestFiles/: catwalk_flourescents.bzw-bak  chats.txt  debris.bzw-bak  ground_reflectors.bzw-bak  groupfile.txt  main_ground.bzw-bak  meshes.bzw  reports.txt  version-1.bzw  version-2.bzw  version-2.bzw-bak  version-2.obj-bak  version-3.bzw  version-3.bzw-bak  version-4.bzw-bak
bzflag-grue/: Makefile  Makefile.in  README  aclocal.m4  bzflag.spec  config.cache.linux-gnu.quinn-desktop  config.status  configure  libtool
bzflag-grue/plugins/ScoreRestorer-master/: Makefile.am  README.md  ScoreRestorer.cpp  ScoreRestorer.def  ScoreRestorer.sln  ScoreRestorer.vcxproj  ScoreRestorer.vcxproj.filters
bzflag-grue/plugins/ctfOverseer/: Makefile  Makefile.am  Makefile.in  README.ctfOverseer.txt  ctfOverseer.cfg  ctfOverseer.cpp  ctfOverseer.la  ctfOverseer.sln  ctfOverseer.vcxproj  ctfOverseer_la-ctfOverseer.lo
bzflag-grue/plugins/ctfOverseer/.deps/: ctfOverseer_la-ctfOverseer.Plo
bzflag-grue/plugins/ctfOverseer/.libs/: ctfOverseer.la  ctfOverseer.lai
bzflag-grue/plugins/gruesTurretDefenseMaster/: Makefile  Makefile.am  Makefile.in  README.gruesTurretDefenseMaster.txt  gruesTurretDefenseMaster.cpp  gruesTurretDefenseMaster.la  gruesTurretDefenseMaster.sln  gruesTurretDefenseMaster.vcxproj  gruesTurretDefenseMaster_la-gruesTurretDefenseMaster.lo
bzflag-grue/plugins/gruesTurretDefenseMaster/.deps/: gruesTurretDefenseMaster_la-gruesTurretDefenseMaster.Plo
bzflag-grue/plugins/gruesTurretDefenseMaster/.libs/: gruesTurretDefenseMaster.la  gruesTurretDefenseMaster.lai
bzflag-grue/plugins/highGravityFlag/: Makefile  Makefile.am  Makefile.in  README.highGravityFlag.txt  highGravityFlag.cpp  highGravityFlag.la  highGravityFlag.sln  highGravityFlag.vcxproj  highGravityFlag_la-highGravityFlag.lo
bzflag-grue/plugins/highGravityFlag/.deps/: highGravityFlag_la-highGravityFlag.Plo
bzflag-grue/plugins/highGravityFlag/.libs/: highGravityFlag.la  highGravityFlag.lai
bzflag-grue/plugins/lookup/: Makefile  Makefile.am  Makefile.in  README.lookup.txt  lookup.cpp  lookup.la  lookup.sln  lookup.txt  lookup.vcxproj  lookup_la-lookup.lo
bzflag-grue/plugins/lookup/.deps/: lookup_la-lookup.Plo
bzflag-grue/plugins/lookup/.libs/: lookup.la  lookup.lai
bzflag-grue/plugins/lowGravityFlag/: Makefile  Makefile.am  Makefile.in  README.lowGravityFlag.txt  lowGravityFlag.cpp  lowGravityFlag.la  lowGravityFlag.sln  lowGravityFlag.vcxproj  lowGravityFlag_la-lowGravityFlag.lo
bzflag-grue/plugins/lowGravityFlag/.deps/: lowGravityFlag_la-lowGravityFlag.Plo
bzflag-grue/plugins/lowGravityFlag/.libs/: lowGravityFlag.la  lowGravityFlag.lai
bzflag-grue/plugins/observerHandler/: Makefile  Makefile.am  Makefile.in  README.observerHandler.txt  observerHandler.cpp  observerHandler.la  observerHandler.sln  observerHandler.vcxproj  observerHandler_la-observerHandler.lo
bzflag-grue/plugins/observerHandler/.deps/: observerHandler_la-observerHandler.Plo
bzflag-grue/plugins/observerHandler/.libs/: observerHandler.la  observerHandler.lai
bzflag-grue/plugins/openai/: Makefile  Makefile.am  Makefile.in  README.openai.txt  openai.cpp  openai.la  openai.sln  openai.vcxproj  openai_la-openai.lo
bzflag-grue/plugins/openai/.deps/: openai_la-openai.Plo
bzflag-grue/plugins/openai/.libs/: openai.la  openai.lai
bzflag-grue/plugins/ricoscoreFlag/: Makefile  Makefile.am  Makefile.in  README.ricoscoreFlag.txt  ricoscoreFlag.cpp  ricoscoreFlag.la  ricoscoreFlag.sln  ricoscoreFlag.vcxproj
bzflag-grue/plugins/ricoscoreFlag/.deps/: ricoscoreFlag_la-ricoscoreFlag.Plo
bzflag-grue/plugins/ricoscoreFlag/.libs/: ricoscoreFlag.la  ricoscoreFlag.lai
bzflag-grue/plugins/scarwallServerMessages/: Makefile  Makefile.am  Makefile.in  README.scarwallServerMessages.txt  scarwallServerMessages.cpp  scarwallServerMessages.la  scarwallServerMessages.sln  scarwallServerMessages.vcxproj  scarwallServerMessages_la-scarwallServerMessages.lo
bzflag-grue/plugins/scarwallServerMessages/.deps/: scarwallServerMessages_la-scarwallServerMessages.Plo
bzflag-grue/plugins/scarwallServerMessages/.libs/: scarwallServerMessages.la  scarwallServerMessages.lai
bzflag-grue/plugins/shittyFlags/: Makefile  Makefile.am  Makefile.in  README.shittyFlags.txt  shittyFlags.cpp  shittyFlags.la  shittyFlags.sln  shittyFlags.vcxproj  shittyFlags_la-shittyFlags.lo
bzflag-grue/plugins/shittyFlags/.deps/: shittyFlags_la-shittyFlags.Plo
bzflag-grue/plugins/shittyFlags/.libs/: shittyFlags.la  shittyFlags.lai
bzflag-grue/plugins/shotAssigner/: Makefile  Makefile.am  Makefile.in  README.shotAssigner.txt  shotAssigner.cpp  shotAssigner.la  shotAssigner.sln  shotAssigner.vcxproj  shotAssigner_la-shotAssigner.lo
bzflag-grue/plugins/shotAssigner/.deps/: shotAssigner_la-shotAssigner.Plo
bzflag-grue/plugins/shotAssigner/.libs/: shotAssigner.la  shotAssigner.lai
bzflag-grue/plugins/shotgunFlag/: Makefile  Makefile.am  Makefile.in  README.shotgunFlag.txt  shotgunFlag.cpp  shotgunFlag.la  shotgunFlag.sln  shotgunFlag.vcxproj  shotgunFlag_la-shotgunFlag.lo
bzflag-grue/plugins/shotgunFlag/.deps/: shotgunFlag_la-shotgunFlag.Plo
bzflag-grue/plugins/shotgunFlag/.libs/: shotgunFlag.la  shotgunFlag.lai
bzflag-grue/plugins/torpedoFlag/: Makefile  Makefile.am  Makefile.in  README.torpedoFlag.txt  torpedoFlag.cpp  torpedoFlag.la  torpedoFlag.sln  torpedoFlag.vcxproj  torpedoFlag_la-torpedoFlag.lo
bzflag-grue/plugins/torpedoFlag/.deps/: torpedoFlag_la-torpedoFlag.Plo
bzflag-grue/plugins/torpedoFlag/.libs/: torpedoFlag.la  torpedoFlag.lai
bzflag-grue/plugins/wishFlag/: Makefile  Makefile.am  Makefile.in  README.wishFlag.txt  wishFlag.cpp  wishFlag.la  wishFlag.sln  wishFlag.vcxproj  wishFlag_la-wishFlag.lo
bzflag-grue/plugins/wishFlag/.deps/: wishFlag_la-wishFlag.Plo
bzflag-grue/plugins/wishFlag/.libs/: wishFlag.la  wishFlag.lai
gruesTowerDefense/: README.txt  startCommand.txt
gruesTurretDefense/: gruesTurretDefense.bzw  turretDefenseREADME.txt
roundabout/: config.cfg  roundabout.bzw  (+1 more)
(+782 files in other folders)
